--- a/portfolio.html
+++ b/portfolio.html
@@ -59,65 +59,129 @@
                 </ul>
                 <!-- проекты в портфолио -->
                 <ul class="projects list">
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/notebook.jpg" alt="Макбук" width="370">
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/notebook.jpg" alt="Макбук" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="projects-position">
                             <h3 class="projects-title-color">Технокряк</h3>
                             <p>Веб-сайт</p>
                         </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/basketball.jpg"
-                                alt="Два баскетболиста в воздухе" width="370">
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/basketball.jpg" alt="Два баскетболиста в прыжке" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                             <div class="projects-position">
                                 <h3 class="projects-title-color">Постер New Orlean vs Golden Star</h3>
                                 <p>Дизайн</p>
                             </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/seafood.jpg" alt="Вывеска ресторана Seafood"
-                                width="370">
+                    <li class="projects-border"><a href="#" class="projects-link">
+                            <div class="projects-thumb">
+                                <img src="./images/seafood.jpg" alt="Вывеска ресторана Seafood" width="370">
+                                <div class="projects-overlay">
+                                    <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту платформу для цифрового
+                                        шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                            </div>
                             <div class="projects-position">
                                 <h3 class="projects-title-color">Ресторан Seafood</h3>
                                 <p>Приложение</p>
                             </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/headphones.jpg" alt="Беспроводные наушники"
-                                width="370">
-                            <div class="projects-position">
-                                <h3 class="projects-title-color">Проект Prime</h3>
-                                <p>Маркетинг</p>
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/headphones.jpg" alt="Беспроводные наушники" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
+                        </div>
+                        <div class="projects-position">
+                            <h3 class="projects-title-color">Проект Prime</h3>
+                            <p>Маркетинг</p>
+                        </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/boxes.jpg" alt="Две маленькие коробки"
-                                width="370">
-                            <div class="projects-position">
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/boxes.jpg" alt="Две маленькие коробки" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
+                        <div class="projects-position">
                                 <h3 class="projects-title-color">Проект Boxes</h3>
                                 <p>Приложение</p>
-                            </div>
+                        </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/monitor.jpg" alt="Монитор" width="370">
-                            <div class="projects-position">
-                                <h3 class="projects-title-color">Inspiration has no Borders</h3>
-                                <p>Веб-сайт</p>
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/monitor.jpg" alt="Монитор" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
+                        </div>
+                        <div class="projects-position">
+                            <h3 class="projects-title-color">Inspiration has no Borders</h3>
+                            <p>Веб-сайт</p>
+                        </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/magazine.jpg" alt="Открытый журнал"
-                                width="370">
-                            <div class="projects-position">
-                                <h3 class="projects-title-color">Издание Limited Edition</h3>
-                                <p>Дизайн</p>
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/magazine.jpg" alt="Открытый журнал" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
+                        </div>
+                        <div class="projects-position">
+                            <h3 class="projects-title-color">Издание Limited Edition</h3>
+                            <p>Дизайн</p>
+                        </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/labeltag.jpg" alt="Лейбл" width="370">
-                            <div class="projects-position">
-                                <h3 class="projects-title-color">Проект LAB</h3>
-                                <p>Маркетинг</p>
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/labeltag.jpg" alt="Лейбл" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
+                        </div>
+                        <div class="projects-position">
+                            <h3 class="projects-title-color">Проект LAB</h3>
+                            <p>Маркетинг</p>
+                        </div>
                         </a></li>
-                    <li class="projects-border"><a href="#" class="projects-link"><img src="./images/designer.jpg"
-                                alt="Дизайнер за роботой в ноутбуке" width="370">
-                            <div class="projects-position">
-                                <h3 class="projects-title-color">Growing Business</h3>
-                                <p>Приложение</p>
+                    <li class="projects-border"><a href="#" class="projects-link">
+                        <div class="projects-thumb">
+                            <img src="./images/designer.jpg" alt="Дизайнер за работой в ноутбуке" width="370">
+                            <div class="projects-overlay">
+                                <p class="projects-overlay-disc">Технокряк это современная площадка распространения коронавируса. Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
+                        </div>
+                        <div class="projects-position">
+                            <h3 class="projects-title-color">Growing Business</h3>
+                            <p>Приложение</p>
+                        </div>
                         </a></li>
                 </ul>
             </div>
